trunk/Archive2/84/3d07ab37a93690/output
main.cpp:11:15: error: use of undeclared identifier 'M'
    auto it = M.begin<double>(), it_end = M.end<double>();
              ^
main.cpp:11:17: error: no template named 'begin'; did you mean 'std::begin'?
    auto it = M.begin<double>(), it_end = M.end<double>();
                ^~~~~
                std::begin
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/range_access.h:48:5: note: 'std::begin' declared here
    begin(_Container& __cont) -> decltype(__cont.begin())
    ^
main.cpp:11:43: error: use of undeclared identifier 'M'
    auto it = M.begin<double>(), it_end = M.end<double>();
                                          ^
main.cpp:11:45: error: no template named 'end'; did you mean 'std::end'?
    auto it = M.begin<double>(), it_end = M.end<double>();
                                            ^~~
                                            std::end
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/range_access.h:68:5: note: 'std::end' declared here
    end(_Container& __cont) -> decltype(__cont.end())
    ^
main.cpp:12:5: error: no template named 'vector'; did you mean 'std::vector'?
    vector<float> foo;
    ^~~~~~
    std::vector
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/stl_vector.h:214:11: note: 'std::vector' declared here
    class vector : protected _Vector_base<_Tp, _Alloc>
          ^
main.cpp:13:19: error: use of undeclared identifier 'M'
    for(auto it = M.begin<float>() ; it != M.end<float>(); ++it) {
                  ^
main.cpp:13:21: error: no template named 'begin'; did you mean 'std::begin'?
    for(auto it = M.begin<float>() ; it != M.end<float>(); ++it) {
                    ^~~~~
                    std::begin
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/range_access.h:48:5: note: 'std::begin' declared here
    begin(_Container& __cont) -> decltype(__cont.begin())
    ^
main.cpp:13:44: error: use of undeclared identifier 'M'
    for(auto it = M.begin<float>() ; it != M.end<float>(); ++it) {
                                           ^
main.cpp:13:46: error: no template named 'end'; did you mean 'std::end'?
    for(auto it = M.begin<float>() ; it != M.end<float>(); ++it) {
                                             ^~~
                                             std::end
/usr/local/bin/../lib/gcc/x86_64-unknown-linux-gnu/4.9.0/../../../../include/c++/4.9.0/bits/range_access.h:68:5: note: 'std::end' declared here
    end(_Container& __cont) -> decltype(__cont.end())
    ^
9 errors generated.
